--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@apollo/client": "^3.13.1",
     "@farcaster/auth-client": "^0.3.0",
     "@farcaster/auth-kit": "^0.6.0",
     "@farcaster/frame-core": "^0.0.27",
@@ -20,7 +21,6 @@
     "@tailwindcss/postcss": "^4.0.9",
     "@tanstack/react-query": "^5.66.9",
     "@upstash/redis": "^1.34.4",
-    "apollo-boost": "^0.4.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "graphql": "^16.10.0",
@@ -31,7 +31,6 @@
     "next-auth": "^4.24.11",
     "ox": "^0.6.9",
     "react": "^18.3.1",
-    "react-apollo": "^3.1.5",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
