--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/postcss": "^4.0.9",
     "@tanstack/react-query": "^5.66.9",
     "@upstash/redis": "^1.34.4",
+    "alchemy-sdk": "^3.5.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "graphql": "^16.10.0",
@@ -36,6 +37,7 @@
     "tailwindcss-animate": "^1.0.7",
     "viem": "^2.23.5",
     "wagmi": "^2.14.12",
+    "websocket": "^1.0.35",
     "zod": "^3.24.2"
   },
   "devDependencies": {
