--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mipd": "^0.0.7",
     "next": "15.2.0",
     "next-auth": "^4.24.11",
+    "next-plausible": "^3.12.4",
     "ox": "^0.6.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
