--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@farcaster/frame-node": "^0.0.16",
     "@farcaster/frame-sdk": "^0.0.34",
     "@farcaster/frame-wagmi-connector": "^0.0.17",
+    "@neynar/nodejs-sdk": "^2.38.0",
     "@radix-ui/react-label": "^2.1.2",
     "@tailwindcss/postcss": "^4.0.9",
     "@tanstack/react-query": "^5.66.9",
@@ -43,6 +44,8 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
+    "@next/eslint-plugin-next": "^15.3.2",
     "@types/node": "^22.13.5",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
